update: setup a initial layout

--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,5 @@
 :root {
-    --color-background: #F0F0F7;
+    --color-background: #2d2d2dea;
     --color-primary-lighter: #9871F5;
     --color-primary-light: #916BEA;
     --color-primary: #8257E5;
@@ -29,10 +29,6 @@
 
 html, body, #root{
     height: 100vh;
-}
-
-body{
-    background: var(--color-background);
 }
 
 #root{
