Alterações nas telas de login,cadastro e home

--- a/src/assets/styles/form.css
+++ b/src/assets/styles/form.css
@@ -1,18 +1,29 @@
-.form-content-left {
-    background: linear-gradient(
-      90deg,
-      rgb(39, 176, 255) 0%,
-      rgb(0, 232, 236) 100%
-    );
-    border-radius: 10px 0 0 10px;
-    position: relative;
-  }
+.jumbotron{
+  background: transparent;
+}
 
-  .form-img {
-    width: 80%;
-    height: 80%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+.h1Text{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  color: #1CDC6E;
+}
+
+.textBody{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  color: #FFFFFF;
+}
+
+.btn-primary {
+  background: rgba(28, 220, 110, 0.9);
+  border-radius: 5px;   
+}
+.btn-secondary {
+  background: #424242;
+  border-radius: 5px;
+  border-style : none;;
+}
